major restructuring, cli&udp improvements

--- a/openmoves/config.json
+++ b/openmoves/config.json
@@ -1,9 +1,12 @@
 {
+	"visualize":1,
+	
 	"shorttime":10,
 	"windowsize":10,
 
 	"unsupervised":{
 		"shortclusterwindowsize": 30,
-		"memorywindowsize": 100
+		"hotspotwindowsize": 100,
+		"pcarefresh": 100
 	}
 }
