rand values for peter

--- a/openmoves/config.json
+++ b/openmoves/config.json
@@ -4,7 +4,8 @@
 
 	"instantaneous":{
 		"pois":[[5,10], [6,7], [80,3]],
-		"stagepts":[[0,0], [0,10], [10,10], [10,0]]
+		"extents":[[-3.7, -3.1], [4.5, 4.9]],
+		"stagepts":[[-3.7,-3.1], [4.5,-3.1], [4.5,4.9], [-3.7,4.9]]
 	},
 	
 	"shorttime":{
