--- a/openmoves/config.json
+++ b/openmoves/config.json
@@ -5,7 +5,8 @@
 	"instantaneous":{
 		"pois":[[5,10], [6,7], [80,3]],
 		"extents":[[-3.7, -3.1], [4.5, 4.9]],
-		"stagepts":[[-3.7,-3.1], [4.5,-3.1], [4.5,4.9], [-3.7,4.9]]
+		"stagepts":[[-3.7,-3.1], [4.5,-3.1], [4.5,4.9], [-3.7,4.9]],
+		"stagedirs":["US", "SL", "DS", "SR"]
 	},
 	
 	"shorttime":{
