removing sparsity and continuing to bugfix

--- a/openmoves/config.json
+++ b/openmoves/config.json
@@ -4,9 +4,9 @@
 
 	"instantaneous":{
 		"pois":[[5,10], [6,7], [80,3]],
-		"extents":[[-3.7, -3.1], [4.5, 4.9]],
-		"stagepts":[[-3.7,-3.1], [4.5,-3.1], [4.5,4.9], [-3.7,4.9]],
-		"stagedirs":["US", "SL", "DS", "SR"]
+		"extents":[[-3.7, -3.1], [4.5, 2.7]],
+		"stagepts":[[-3.7,-3.1], [4.5,-3.1], [4.5,2.7], [-3.7,2.7]],
+		"stagedirs":["US", "SR", "DS", "SL"]
 	},
 	
 	"shorttime":{
